--- a/css/common.css
+++ b/css/common.css
@@ -121,7 +121,7 @@ body {
   border: none;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  /* font-size: 16px; */
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
@@ -182,6 +182,8 @@ body {
   width: 148px;
   height: 40px;
   background: #4e75ff;
+  font-weight: 500;
+  color: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .widget > button:hover {
